fixed mobile alignment bug

--- a/style-grid.css
+++ b/style-grid.css
@@ -15,6 +15,7 @@
 		display: grid;
 		grid-template-columns: 1fr;
 		grid-template-rows: 1fr 1fr 1fr 1fr 1fr;
+		grid-gap: 1em;
 		grid-template-areas:
 		"photo"
 		"paint"
